--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>Frontend Mentor | FAQ Accordion Card</title>
 </head>
 <body>
+  <main>
   <div class="container">
     <h1>FAQ</h1>
     <p>How many team members can I invite?</p>
@@ -45,5 +46,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Axel Leguero</a>.
   </div>
+  </main>
 </body>
 </html>
